2020-08-17  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Remove support for NPAPI plugins
        https://bugs.webkit.org/show_bug.cgi?id=215503

        Reviewed by Darin Adler.

        * PlatformGTK.cmake:
        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
        (testWebKitSettings):
        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebContext.cpp:
        (beforeAll):

2020-08-17  Youenn Fablet  <youenn@apple.com>

        Update W3C test exporter to use Authorisation header instead of query parameter to validate GitHub account
        https://bugs.webkit.org/show_bug.cgi?id=215548

        Reviewed by Darin Adler.

        * Scripts/webkitpy/w3c/test_exporter.py:
        (WebPlatformTestExporter._validate_and_save_token):
        access_token query parameter is dbeing deprecated in favor of Authorization header.
        Update script accordingly.

2020-08-15  Tim Horton  <timothy_horton@apple.com>

        Live Web Content processes do not respect accent color if dynamically changed to "multicolor"
        https://bugs.webkit.org/show_bug.cgi?id=215523
        <rdar://problem/63941133>

        Reviewed by Wenson Hsieh.

        * TestWebKitAPI/Tests/WebKit/PreferenceChanges.mm:
        (deleteTestDefaults):
        (TEST):
        Fix some minor style issues with these tests.
        Fix a bug where these tests would leak state between themselves by leaving defaults behind.
        Change the NSUserDefaults key name so that it is abundantly obvious where it comes from when you see it in your defaults.
        Leave a FIXME for the future that these tests should probably not be writing to the real persistent defaults.
        Add a test that ensures that the observer correctly respects deletion of a default.

2020-08-14  Jonathan Bedard  <jbedard@apple.com>

        [webkitcorepy] Add a NullHandler to logger
        https://bugs.webkit.org/show_bug.cgi?id=215524
        <rdar://problem/67102367>
