@@ -1,3 +1,15 @@
+2020-08-17  Jonathan Bedard  <jbedard@apple.com>
+
+        [webkitcorepy] Autoinstaller is very slow in git-svn checkouts
+        https://bugs.webkit.org/show_bug.cgi?id=215534
+        <rdar://problem/67120623>
+
+        Reviewed by Dewei Zhu.
+
+        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Bump version.
+        * Scripts/libraries/webkitcorepy/webkitcorepy/autoinstall.py:
+        (Package.install): Download packages to a temporary directory so that setup.py runs faster.
+
 2020-08-17  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][WPE] Remove support for NPAPI plugins
